*Empty MediaWiki Message*

--- a/Лаꙁаръ.mw
+++ b/Лаꙁаръ.mw
@@ -5,3 +5,20 @@
 [[Category:Крьстиꙗньство]]
 
 [[fr:Lazare]]
+[[ca:Llàtzer]]
+[[cs:Lazar]]
+[[de:Lazarus]]
+[[en:Lazarus]]
+[[es:Lázaro]]
+[[fi:Lasarus]]
+[[he:לזרוס (דמות)]]
+[[it:Lazzaro di Betania]]
+[[ja:ラザロ]]
+[[lt:Lozorius]]
+[[nl:Lazarus]]
+[[no:Lasarus]]
+[[pl:Łazarz (postać biblijna)]]
+[[pt:Lázaro]]
+[[ru:Лазарь из Вифании]]
+[[sv:Lasaros]]
+[[zh:拉撒路]]
