robot  Modifying: [[es:Roman Pavliuchenko]]

--- a/Романъ_Павлючєнко.mw
+++ b/Романъ_Павлючєнко.mw
@@ -6,7 +6,7 @@
 [[da:Roman Pavljutjenko]]
 [[de:Roman Anatoljewitsch Pawljutschenko]]
 [[en:Roman Pavlyuchenko]]
-[[es:Román Pavliuchenko]]
+[[es:Roman Pavliuchenko]]
 [[et:Roman Pavljutšenko]]
 [[ext:Roman Pavlyuchenko]]
 [[fi:Roman Pavljutšenko]]
