The file [[:Image:Coat_of_arms_of_Prilep.png]] has been removed, as it has been deleted by [[:commons:User:MBisanz]]: '': Copyright violation, see [[commons:Commons:Licensing]]''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Прилѣпъ.mw
+++ b/Прилѣпъ.mw
@@ -1,7 +1,7 @@
 {{Селѥниѥ|Имѧ = Прилѣпъ
 |Тѷпъ = градъ
 | знамѧ= Flag of Prilep.png
-| знакъ =Coat_of_arms_of_Prilep.png
+| знакъ =
 | Дрьжава ={{Македонїѩ знамѧ}} [[Македонї]]
 | Глава = 
 | Людии = 73 925  
