*Empty MediaWiki Message*

--- a/Чєшьско.mw
+++ b/Чєшьско.mw
@@ -1,4 +1,4 @@
-{{Дрьжава|name = Чешьско
+{{Дрьжава|name = Чє́шьско
 | знамѧ= [[Видъ:Flag of the Czech Republic.svg|150px]]
 | знакъ = [[image:Coat of arms of the Czech Republic.svg|80px]]
 | map = EU location CZE.png
@@ -10,7 +10,7 @@
 | Почѧта = 1993
 }}
 
-'''Чешьско''' ({{Lang-cu|Чеси}}, слово «Чешьско» чешьскаѥго имене прѣложениѥ ѥстъ. {{Lang-cs|Česko}}) срѣдьн҄ии [[Еѵрѡпа|Еѵрѡпѣ]] дрьжава ѥстъ. Стольнъ градъ Чехъ [[Прага]] ѥстъ. Чешьско съставѣ [[Чешьскословѣньско|Чешьскословѣньсцѣ]] послѣди [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше. Послѣди распада Чешьскословѣньска Чешьско стала ѥсть пакы самостотѣльна дрьжава.
+'''Чє́шьско''' ({{Lang-cu|Чє́си}}, слово «Чє́шьско» чє́шьскаѥго имене прѣложениѥ ѥстъ. {{Lang-cs|Česko}}) срѣдьн҄ии [[Еѵрѡпа|Еѵрѡпѣ]] дрьжава ѥстъ. Стольнъ градъ Чє́хъ [[Прага]] ѥстъ. Чє́шьско съставѣ [[Чешьскословѣньско|Чешьскословѣньсцѣ]] послѣди [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше. Послѣди распада Чє́шьскословѣньска Чє́шьско стала ѥсть пакы самостотѣльна дрьжава.
 
 {{Словѣньскы дрьжавы}}
 [[Category:Чє́шьско|*]]
