--- a/Придънѣстриѥ.mw
+++ b/Придънѣстриѥ.mw
@@ -56,6 +56,7 @@
 [[nn:Transnistria]]
 [[no:Transnistria]]
 [[oc:Transnístria]]
+[[os:Приднестровье]]
 [[pl:Naddniestrze]]
 [[pms:Transnistria]]
 [[pt:Transnístria]]
