*Empty MediaWiki Message*

--- a/Мємфь.mw
+++ b/Мємфь.mw
@@ -1,1 +1,4 @@
-'''Мемфь''' древл҄ьн [[Егѷптъ|Егѷпта]] стольнъ градъ бѣ, основанъ [[фараѡнъ|фараѡномь]] [[Хоръ-Аха|Хоръ-Ахоѭ]].
+{{coord|display=title|29|50|40.8|N|31|15|3.3|E|type:landmark}}
+'''Мє́мфь''' дрєвл҄ьнꙗ [[Егѷптъ|Єгѷпта]] сто́льнъ гра́дъ бѣ · основанъ [[фараѡнъ|фараѡномь]] [[Хоръ-Аха|Хоръ-Ахоѭ]]
+[[Category:Дрє́вл҄ьнъ Єгѵ́птъ]]
+[[ru:Мемфис (Египет)]]
