*Empty MediaWiki Message*

--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -1,5 +1,6 @@
+{{coord|display=title|59|56||N|30|20||E|type:city}}
 {{Селѥниѥ|Имѧ = Санкт-Пєтєрбоу́ргъ
-|Тӱпъ = гра́дъ
+|Тѷпъ = гра́дъ
 | знамѧ= Flag of St Petersburg (Russia).png
 | знакъ = Coat of Arms of Saint Petersburg large (2003).png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсі́ꙗ
