*Empty MediaWiki Message*

--- a/Москъва.mw
+++ b/Москъва.mw
@@ -1,3 +1,4 @@
+{{coord|display=title|55|45||N|37|37||E|type:city}}
 {{Селѥниѥ|Имѧ = Москъва́
 | Тѷпъ = Гра́дъ
 | знамѧ= Flag of Moscow (Russia).png
