--- a/Чаталхѷюкъ.mw
+++ b/Чаталхѷюкъ.mw
@@ -1,5 +1,11 @@
-'''Чаталъ-Хѷюкъ''' прьво село въ Анатолїи ѥстъ ѥже девѧтию тысѧщь лѣтъ назадъ почѧтъ быти.
+{{coord|display=title|37|39|36|N|32|45|12|E|type:landmark_region:TR}}
+[[Ви́дъ:CatalHoyukSouthArea.JPG|thumb]]
+'''Чаталъ-Хѷюкъ''' и {{lang-tr|Çatalhöyük}} · прьво сєло въ Анатолі́и ѥ́стъ ѥжє дєвѧтию тꙑсѧщь лѣтъ наꙁадъ почѧтъ бꙑти
 
+== ꙁьри́ та́кождє ==
+{{commonscat|Çatalhöyük}}
+* [http://www.catalhoyuk.com/ Чаталъ-Хѷюкъ мєждоусѣтии]
+[[Category:Тоу́рьци]]
 {{Link FA|eo}}
 
 [[bs:Čatal Hejuk]]
