*Empty MediaWiki Message*

--- a/Оулиꙗновьскъ.mw
+++ b/Оулиꙗновьскъ.mw
@@ -1,3 +1,4 @@
+{{coord|display=title|54|19||N|48|23||E|type:city(638300)_region:RU}}
 {{Градъ|Имѧ = Оулиꙗ́новьскъ
 | Тѷпъ=Гра́дъ
 | знамѧ= Flag_of_Ulyanovsk.svg
@@ -9,7 +10,7 @@
 | Харта = [[Видъ:Ulyanovsk in Ulyanovsk Oblast.png|200px|]]
 |}}
 [[Видъ:YJlb9HoBCK 1.JPG|thumb|left|Оулиꙗ́новьска видъ]]
-'''Оулиꙗ́новьскъ''' и {{lang-ru|Ульяновск}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] гра́дъ ѥ́стъ ⁙ Люди́и обита́ѥтъ 623 тꙑ́сѫщѧ ⁙ Гра́дъ ꙁьданъ рѣ́коу [[Вль́га|Вльѕѣ]] и [[Свиꙗ́га|Свиꙗꙃѣ]] ѥ́стъ ⁙ [[Оулиꙗ́новьска о́бласть|Оулиꙗ́новьскꙑ о́бласти]] гла́вьнъ гра́дъ ѥ́стъ 
+'''Оулиꙗ́новьскъ''' и {{lang-ru|Ульяновск}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] гра́дъ ѥ́стъ ⁙ Люди́и обита́ѥтъ 623 тꙑ́сѫщѧ ⁙ Гра́дъ ꙁьданъ рѣ́коу [[Вль́га|Вльꙃѣ]] и [[Свиꙗ́га|Свиꙗꙃѣ]] ѥ́стъ ⁙ [[Оулиꙗ́новьска о́бласть|Оулиꙗ́новьскꙑ о́бласти]] гла́вьнъ гра́дъ ѥ́стъ 
 
 == їсторі́ꙗ ==
 
