*Empty MediaWiki Message*

--- a/Римъ.mw
+++ b/Римъ.mw
@@ -1,6 +1,8 @@
+{{coord|display=title|41|54||N|12|30||E|type:city(2823873)_region:IT}}
 {{Градъ|Имѧ = Ри́мъ
+|Тѷпъ=гра́дъ
 | знамѧ= Flag of Rome.svg
-| знакъ = Roma-Stemma.png
+| знакъ = Coat of arms of Rome.svg
 | Дрьжава = {{Италїѩ знамѧ}} [[Италі́ꙗ]]
 | Глава = 
 | Людии =  2,705,603
