robot  Modifying: [[co:Marcu Tulliu Cicerone]]

--- a/Кїкєрѡнъ.mw
+++ b/Кїкєрѡнъ.mw
@@ -17,7 +17,7 @@
 [[bg:Цицерон]]
 [[bn:সিসারো]]
 [[ca:Ciceró]]
-[[co:Cicerone]]
+[[co:Marcu Tulliu Cicerone]]
 [[cs:Marcus Tullius Cicero]]
 [[cy:Cicero]]
 [[da:Marcus Tullius Cicero]]
