--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -2,7 +2,7 @@
 {{Селѥниѥ|Имѧ = Санкт-Пєтєрбоу́ргъ
 |Тѷпъ = гра́дъ
 | знамѧ= Flag of St Petersburg (Russia).png
-| знакъ = Coat of Arms of Saint Petersburg large (2003).png
+| знакъ =Coat_of_Arms_of_Saint_Petersburg_(2003).png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсі́ꙗ
 | Глава = Валєнти́на Матвиѥ́нко
 | Людии = 4500 тꙑ́сѫщь
