*Empty MediaWiki Message*

--- a/Пиринъ.mw
+++ b/Пиринъ.mw
@@ -1,5 +1,5 @@
 [[Ви́дъ:V Pirin IMG 1076.jpg|thumb]]
-'''Пири́нъ''' и {{lang-bg|Пирин}} · [[Блъгарі́ꙗ|Блъгарі́ѩ]] го́рꙑ ѥ́стъ ⁙ Наивꙑсьша гора Вихрєнъ (2914 [[мє́тро|м҃]]) ѥ́стъ ⁙ Пири́на простра́ниѥ 1210 к҃м² ѥ́стъ
+'''Пири́нъ''' и {{lang-bg|Пирин}} · [[Блъгарі́ꙗ|Блъгарі́ѩ]] го́рꙑ ѥ́стъ ⁙ Наивꙑсьша гора Вихрєнъ (2914 [[мє́тро|м҃]] · {{coord|41|45|50|N|23|25|30|E|}}) ѥ́стъ ⁙ Пири́на простра́ниѥ 1210 к҃м² ѥ́стъ
 {{commonscat|Pirin}}
 [[Катигорі́ꙗ:Блъгарі́ꙗ]]
 
