--- a/Макєдонїꙗ_·_страна.mw
+++ b/Макєдонїꙗ_·_страна.mw
@@ -4,19 +4,35 @@
 
 [[Category:Стра́нꙑ]]
 
-
-[[bg:Македония]]
-[[cy:Macedonia]]
+[[als:Makedonien]]
+[[bg:Македония (област)]]
+[[br:Makedonia (rannvro)]]
+[[bs:Makedonija (regija)]]
+[[cs:Makedonie (region)]]
+[[cy:Macedonia (rhanbarth)]]
 [[da:Makedonien (område)]]
 [[de:Makedonien]]
-[[en:Macedonia (region)]]
 [[el:Μακεδονία]]
-[[es:Macedonia]]
-[[fa:مقدونیه]]
+[[en:Macedonia (region)]]
+[[es:Macedonia (región)]]
+[[fr:Géographie de la Macédoine]]
+[[hr:Makedonija (regija)]]
+[[id:Makedonia (region)]]
+[[ja:マケドニア]]
+[[lt:Makedonijos regionas]]
 [[mk:Македонија]]
 [[nl:Macedonië (regio)]]
-[[ja:マケドニア地方]]
 [[pl:Macedonia (region)]]
-[[sv:Makedonien (historiskt område)]]
-[[tr:makedonya]]
+[[pt:Macedônia (região)]]
+[[qu:Makidunya (suyu)]]
+[[ro:Macedonia (regiune)]]
+[[roa-rup:Machedonia]]
+[[ru:Македония (область)]]
+[[sh:Makedonija (region)]]
+[[sl:Makedonija (regija)]]
+[[sr:Македонија (регион)]]
+[[sv:Makedonien (historisk region)]]
+[[tr:Makedonya (bölge)]]
+[[uk:Македонія (історична область)]]
+[[vi:Macedonia]]
 [[zh:馬其頓]]
