*Empty MediaWiki Message*

--- a/Чрьна_Гора.mw
+++ b/Чрьна_Гора.mw
@@ -1,24 +1,24 @@
-{{Дрьжава|name = Чрьна Гора
+{{Дрьжава|name = Чрьна́ Гора́<br>{{lat-ga|Црна Гора}}<br>Crna Gora
 | знамѧ= [[Видъ:Flag of Montenegro.svg|150px]]
 | знакъ = [[image:Coat of arms of Montenegro.svg|80px]]
 | map = LocationMontenegro.svg
 | Стольнъ градъ = [[Подъгорица]]
-| Ѩзыкъ = [[срьбьскъ ѩзыкъ|срьбьскъ]]
+| Ѩзыкъ = [[срь́бьскъ ѩꙁꙑ́къ|срь́бьскъ]]
 | Глава = 
 | area =
-| Людии = 684 тысѧщи 
+| Людии = 684 тꙑ́сѫщи 
 | Почѧта = 2006
 }}
-'''Чрьна Гора''' или '''Чрьногориѥ''' ({{Lang-sr|Црна Гора/Crna Gora}}; невѣрьнѣ зываѥма иногда словѣньскы «Чрьногори» по образѹ дрѹгъ дрьжавъ именъ) дрьжава [[Балкани|Балканъ]] ѥстъ. Чрьныѩ Горы стольнъ градъ [[Подъгорица]] ѥстъ. Чрьны Горы людии 684 тысѧщи обитаѥтъ.
+'''Чрьна́ Гора́''' и́ли '''Чрьного́риѥ''' и {{Lang-sr|Црна Гора/Crna Gora}} . нєвѣрьнѣ ꙁꙑваѥмаꙗ иногда словѣ́ньскы ⁖ Чрьногориꙗ ⁖ по образоу дроугъ дрьжа́въ имєнъ · дрьжа́ва [[Балкани|Балканъ]] ѥ́стъ ⁙ Чрьнꙑѩ Горꙑ сто́льнъ гра́дъ [[Подъгорица]] ѥ́стъ ⁙ Чрьнꙑ Горꙑ люди́и 684 тꙑ́сѫщи обита́ѥтъ
 
-== Їсторї ==
+== їсторі́ꙗ ==
 
-Давѣ была самостотел҄ьна бѣаше, 1918 годѣ по [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше въ съставъ Кралѥвьства Срьбъ, Хръватъ и Словѣньць (послѣди именѹѥма [[Югослави]], по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] же Социалистичьска  Съвѫзьна Димократї Югослави (ССДЮ) бѣаше). Послѣди распада ССДЮ въшьла бѣаше въ съвѫзьнѫ дрьжавѫ Срьбиѭ и Чрьногориѥ, 2006 годѣ по въсенародьна гласовани Чрьна Гора стала ѥстъ пакы самостотел҄ьна дрьжава. 
+Давѣ бꙑла самостоꙗтєл҄ьнаꙗ бѣашє · 1918 лѣ́та по [[Прьваꙗ Свѣтьнаꙗ Воина|Прьвꙑѩ Свѣтьнꙑѩ Воинꙑ]] въшьла бѣашє въ съставъ Кралѥвьства Срь́бъ, Хръва́тъ и Словѣ́ньць · послѣди имєноуѥмаꙗ [[Югославиꙗ]] · по [[Вътораꙗ Свѣтьнаꙗ Воина|Въторꙑѩ Свѣтьнꙑѩ Воины]] ꙗжє Социалисти́чьска  Съвѫ́ꙁьна Димократі́ꙗ Югославиꙗ и́ли ССД҃Ю бѣашє ⁙ Послѣди распада ССД҃Ю въшьла бѣашє въ съвѫꙁьнѫ дрьжа́вѫ Срь́бїѭ и Чрьного́риѥ · 2006 лѣ́та по въсєнародьна гласованиꙗ Чрьна́ Гора́ стала ѥстъ пакꙑ самостоꙗтєл҄ьна дрьжа́ва 
 
-== Зьри такожде ==
+== ꙁьри́ та́кождє ==
 {{commonscat|Montenegro}}
 {{Словѣньскы дрьжавы}}
-[[Category:Чрьна Гора| ]]
+[[Category:Чрьна́ Гора́| ]]
 
 [[af:Montenegro]]
 [[als:Montenegro]]
