*Empty MediaWiki Message*

--- a/Чрьна_Гора.mw
+++ b/Чрьна_Гора.mw
@@ -9,11 +9,11 @@
 | Людии = 684 тꙑ́сѫщи 
 | Почѧта = 2006
 }}
-'''Чрьна́ Гора́''' и́ли '''Чрьного́риѥ''' и {{Lang-sr|Црна Гора/Crna Gora}} . нєвѣрьнѣ ꙁꙑваѥмаꙗ иногда словѣ́ньскы ⁖ Чрьногориꙗ ⁖ по образоу дроугъ дрьжа́въ имєнъ · дрьжа́ва [[Балкани|Балканъ]] ѥ́стъ ⁙ Чрьнꙑѩ Горꙑ сто́льнъ гра́дъ [[Подъгорица]] ѥ́стъ ⁙ Чрьнꙑ Горꙑ люди́и 684 тꙑ́сѫщи обита́ѥтъ
+'''Чрьна́ Гора́''' и́ли '''Чрьного́риѥ''' и {{Lang-sr|Црна Гора/Crna Gora}} . нєвѣрьнѣ ꙁꙑваѥмаꙗ иногда словѣ́ньскы ⁖ Чрьногориꙗ ⁖ по обраꙁоу дроугъ дрьжа́въ имєнъ · дрьжа́ва [[Балкани|Балканъ]] ѥ́стъ ⁙ Чрьнꙑѩ Горꙑ сто́льнъ гра́дъ [[Подъгорица]] ѥ́стъ ⁙ Чрьнꙑ Горꙑ люди́и 684 тꙑ́сѫщи обита́ѥтъ
 
 == їсторі́ꙗ ==
 
-Давѣ бꙑла самостоꙗтєл҄ьнаꙗ бѣашє · 1918 лѣ́та по [[Прьваꙗ Свѣтьнаꙗ Воина|Прьвꙑѩ Свѣтьнꙑѩ Воинꙑ]] въшьла бѣашє въ съставъ Кралѥвьства Срь́бъ, Хръва́тъ и Словѣ́ньць · послѣди имєноуѥмаꙗ [[Югославиꙗ]] · по [[Вътораꙗ Свѣтьнаꙗ Воина|Въторꙑѩ Свѣтьнꙑѩ Воины]] ꙗжє Социалисти́чьска  Съвѫ́ꙁьна Димократі́ꙗ Югославиꙗ и́ли ССД҃Ю бѣашє ⁙ Послѣди распада ССД҃Ю въшьла бѣашє въ съвѫꙁьнѫ дрьжа́вѫ Срь́бїѭ и Чрьного́риѥ · 2006 лѣ́та по въсєнародьна гласованиꙗ Чрьна́ Гора́ стала ѥстъ пакꙑ самостоꙗтєл҄ьна дрьжа́ва 
+Давѣ бꙑла самостоꙗтєл҄ьнаꙗ бѣашє · 1918 лѣ́та по [[Прьваꙗ Свѣтьнаꙗ Воина|Прьвꙑѩ Свѣтьнꙑѩ Воинꙑ]] въшьла бѣашє въ съставъ Кралѥвьства Срь́бъ, Хръва́тъ и Словѣ́ньць · послѣди имєноуѥмаꙗ [[Югославиꙗ]] · по [[Вътораꙗ Свѣтьнаꙗ Воина|Въторꙑѩ Свѣтьнꙑѩ Воинꙑ]] ꙗжє Социалисти́чьска  Съвѫ́ꙁьна Димократі́ꙗ Югославиꙗ и́ли ССД҃Ю бѣашє ⁙ Послѣди распада ССД҃Ю въшьла бѣашє въ съвѫꙁьнѫ дрьжа́вѫ Срь́бїѭ и Чрьного́риѥ · 2006 лѣ́та по въсєнародьна гласованиꙗ Чрьна́ Гора́ стала ѥстъ пакꙑ самостоꙗтєл҄ьна дрьжа́ва 
 
 == ꙁьри́ та́кождє ==
 {{commonscat|Montenegro}}
