The file [[:Image:Mongolia_coa.gif]] has been replaced by [[:Image:Coat_of_arms_of_Mongolia.gif]] by administrator [[:commons:User:ChristianBier]]: ''Duplicate, image renamed by [[commons:User:BetacommandBot|BetacommandBot]]''. ''[[m:User:CommonsDeli

--- a/Мѫголи.mw
+++ b/Мѫголи.mw
@@ -1,6 +1,6 @@
 {{Дрьжава|name = Мѫго́ли<br>{{lat-ga|Монгол Улс}}<br> [[Ви́дъ:Monggol ulus.svg|64px]]
 | знамѧ= [[Видъ:Flag of Mongolia.svg|150px]]
-| знакъ = [[image:Mongolia coa.gif|80px]]
+| знакъ = [[image:Coat_of_arms_of_Mongolia.gif|80px]]
 | map = LocationMongolia.png
 | Стольнъ градъ = [[Оуланбатаръ]]
 | Ѩзыкъ = [[мѫго́льскъ ѩꙁꙑ́къ|мѫго́льскъ]]
