*Empty MediaWiki Message*

--- a/Новъ_Градъ.mw
+++ b/Новъ_Градъ.mw
@@ -1,3 +1,4 @@
+{{coord|display=title|58|31||N|31|17||E|type:city(218000)_region:RU}}
 {{Селѥниѥ|Имѧ = Новъ Градъ
 |Тѷпъ= гра́дъ
 | знамѧ= Flag of Veliky Novgorod.png
@@ -17,7 +18,7 @@
 == ꙁьри́ та́кождє ==
 
 <references/>
-[[Category:Новъ Градъ]]
+[[Category:Но́въ Гра́дъ]]
 
 {{Link FA|no}}
 
