*Empty MediaWiki Message*

--- a/Нѣмьци.mw
+++ b/Нѣмьци.mw
@@ -2,6 +2,7 @@
 | знамѧ= [[Видъ:Flag of Germany.svg|150px]]
 | знакъ = [[image:Coat of Arms of Germany.svg|80px]]
 | map = LocationGermany.svg 
+| Речениѥ = Einigkeit und Recht und Freiheit 
 | Стольнъ градъ = [[Бєрлинъ]]  
 | Ѩзыкъ = [[Нѣ́мьчьскъ ѩꙁꙑ́къ|нѣ́мьчьскъ]] 
 | Глава = 
@@ -9,7 +10,7 @@
 | Людии =  82,5 лєѡ́дръ
 | Почѧта = 
 }}
-'''Нѣ́мьци''' и {{lang-de|Deutschland}} · єпї́симьно и́мѧ '''Нѣ́мьць Съвѫ́ꙁьна Димократі́ꙗ''' и {{lang-de|Bundesrepublik Deutschland}} · дрьжа́ва [[Срѣ́дьнꙗ Єѵрѡ́па|Срѣ́дьнѩ Єѵрѡ́пꙑ]] ѥ́стъ ⁙ Нѣмьць сто́льнъ гра́дъ [[Берлинъ|Бєрлинъ]] ѥ́стъ ⁙ Людии обитаѥтъ 82,5 лєѡ́дръ ⁙ Бол҄ьши рѣ́ка [[Доунавъ]] · болѥ ѥꙁєро [[Бодєнꙁєи]] ѥ́стъ
+'''Нѣ́мьци''' и {{lang-de|Deutschland}} · єпі́симьно и́мѧ '''Нѣ́мьць Съвѫ́ꙁьна Димократі́ꙗ''' и {{lang-de|Bundesrepublik Deutschland}} · дрьжа́ва [[Срѣ́дьнꙗ Єѵрѡ́па|Срѣ́дьнѩ Єѵрѡ́пꙑ]] ѥ́стъ ⁙ Нѣмьць сто́льнъ гра́дъ [[Берлинъ|Бєрлинъ]] ѥ́стъ ⁙ Людии обитаѥтъ 82,5 лєѡ́дръ ⁙ Бол҄ьши рѣ́ка [[Доунавъ]] · болѥ ѥꙁєро [[Бодєнꙁєи]] ѥ́стъ
 
 [[Category:Дрьжа́вꙑ]]
 [[Category:Єѵрѡ́па]]
