--- a/Сѷнтаѯь.mw
+++ b/Сѷнтаѯь.mw
@@ -54,6 +54,7 @@
 [[sw:Sintaksi]]
 [[ta:சொற்றொடரியல்]]
 [[th:วากยสัมพันธ์]]
+[[tr:Sözdizim bilimi]]
 [[uk:Синтаксис]]
 [[wa:Adjinçaedje del fråze]]
 [[zh:语法学]]
