*Empty MediaWiki Message*

--- a/Чрьна_Гора.mw
+++ b/Чрьна_Гора.mw
@@ -9,7 +9,7 @@
 | Людии = 684 тꙑ́сѫщи 
 | Почѧта = 2006
 }}
-'''Чрьна́ Гора́''' и́ли '''Чрьного́риѥ''' и {{Lang-sr|Црна Гора/Crna Gora}} . нєвѣрьнѣ ꙁꙑваѥмаꙗ иногда словѣ́ньскы ⁖ Чрьногориꙗ ⁖ по обраꙁоу дроугъ дрьжа́въ имєнъ · дрьжа́ва [[Балкани|Балканъ]] ѥ́стъ ⁙ Чрьнꙑѩ Горꙑ сто́льнъ гра́дъ [[Подъгорица]] ѥ́стъ ⁙ Чрьнꙑ Горꙑ люди́и 684 тꙑ́сѫщи обита́ѥтъ
+'''Чрьна́ Гора́''' и́ли '''Чрьного́риѥ''' и {{Lang-sr|Црна Гора/Crna Gora}} . нєвѣрьнѣ ꙁꙑваѥмаꙗ иногда словѣ́ньскꙑ ⁖ Чрьногориꙗ ⁖ по обраꙁоу дроугъ дрьжа́въ имєнъ · дрьжа́ва [[Балкани|Балканъ]] ѥ́стъ ⁙ Чрьнꙑѩ Горꙑ сто́льнъ гра́дъ [[Подъгорица]] ѥ́стъ ⁙ Чрьнꙑ Горꙑ люди́и 684 тꙑ́сѫщи обита́ѥтъ
 
 == їсторі́ꙗ ==
 
