robot  Modifying: [[ru:Плиска]]

--- a/Пльсковъ_·_Блъгарїи.mw
+++ b/Пльсковъ_·_Блъгарїи.mw
@@ -25,8 +25,8 @@
 [[he:פליסקה]]
 [[no:Pliska]]
 [[pl:Pliska]]
-[[ru:Плиска (Болгария)]]
+[[ru:Плиска]]
+[[sh:Aboba]]
 [[sq:Pliska]]
 [[sr:Плиска]]
-[[sh:Aboba]]
 [[sv:Pliska]]
