*Empty MediaWiki Message*

--- a/Китъ.mw
+++ b/Китъ.mw
@@ -1,4 +1,4 @@
-[[Image:Humpbackwhale37.jpg|thumb|Китъ]]
+[[Image:Humpback stellwagen edit.jpg|thumb|Китъ]]
 '''Китъ''' ѥстъ великъ звѣрь морьскъ.
 
 [[Category:Звѣриѥ]]
