--- a/Люблꙗна.mw
+++ b/Люблꙗна.mw
@@ -8,7 +8,7 @@
 | Харта = [[Видъ:Karte Ljubljana si.png|200 px]]
 |}}
 [[Видъ:Lublana9.jpg|thumb|left]]
-'''Люблꙗ́на''' и {{lang-sl|Ljubljana}} · [[Їллѷрі́иска Словѣні́ꙗ|Їллѷрі́искꙑ Словѣні́ѩ]] [[сто́льнъ гра́дъ]] ѥ́сть ⁙ Ꙁьдана [[Люблꙗница (рѣка)|Люблꙗницѣ]] рѣцѣ 1144 лѣ́та ѥстъ ⁙ Люди́и обитаѥтъ 258 873.
+'''Люблꙗ́на''' и {{lang-sl|Ljubljana}} · [[Їллѷрі́иска Словѣні́ꙗ|Їллѷрі́искꙑ Словѣні́ѩ]] [[сто́льнъ гра́дъ]] ѥ́сть ⁙ Ꙁьдана [[Люблꙗница (рѣка)|Люблꙗницѣ]] рѣцѣ 1144 лѣ́та ѥстъ ⁙ Люди́и обитаѥтъ 258,873.
 
 {{commonscat|Ljubljana}}
 
