*Empty MediaWiki Message*

--- a/Їєроусалимъ.mw
+++ b/Їєроусалимъ.mw
@@ -1,7 +1,7 @@
 '''Їєрѹсалимъ''' ѥстъ градъ [[Їзраель]].
 
 [[Category:Гради]]
-[[Катигорї:Їздраил̑ь]]
+[[Category:Їздраил̑ь]]
 
 {{Link FA|en}}
 {{Link FA|he}}
