*Empty MediaWiki Message*

--- a/Їєроусалимъ.mw
+++ b/Їєроусалимъ.mw
@@ -1,6 +1,18 @@
-'''Їєрѹсалимъ''' ѥстъ градъ [[Їзраель]].
+{{coord|display=title|31|47||N|35|14||E|type:city}}
+{{Селѥниѥ|Имѧ = Їєроусали́мъ
+|Тѷпъ= гра́дъ
+| знамѧ= Flag of Jerusalem.svg
+| знакъ = Jerusalem-coat-of-arms.svg
+| Дрьжава = {{Їꙁдраилꙗ ꙁнамѧ}} [[Їздраил̑ь|Їꙁдраил҄ь]]
+| Глава = 
+| Людии =729,900
+| Основанъ = 
+| Харта = [[Ви́дъ:Jerusalem Israel Map.png|200px]]
+|}}
+'''Їєроусали́мъ''' и {{lang-he| ירושלים}} · {{lang-ar| القدس}} · [[Їздраил̑ь|Їꙁдраилꙗ]] сто́льнъ гра́дъ ѥ́стъ ⁙ Люди́и обита́ѥтъ 729,900
 
-[[Category:Гради]]
+{{commonscat|Jerusalem}}
+[[Category:Гра́ди]]
 [[Category:Їздраил̑ь]]
 
 {{Link FA|en}}
