--- a/Понєдѣл҄ьникъ.mw
+++ b/Понєдѣл҄ьникъ.mw
@@ -5,7 +5,7 @@
 [[af:Maandag]]
 [[als:Montag]]
 [[am:ሰኞ]]
-[[ang:Mōnandæg]]
+[[ang:Mōnandæȝ]]
 [[ar:الاثنين]]
 [[ast:Llunes]]
 [[az:Bazar ertəsi]]
@@ -73,6 +73,7 @@
 [[lad:Lunes]]
 [[lb:Méindeg]]
 [[lmo:Lündesdí]]
+[[lo:ວັນຈັນ]]
 [[lt:Pirmadienis]]
 [[lv:Pirmdiena]]
 [[mk:Понеделник]]
@@ -109,6 +110,7 @@
 [[sw:Jumatatu]]
 [[ta:திங்கள் (கிழமை)]]
 [[te:సోమవారము]]
+[[tg:Душанбе (рӯзи ҳафта)]]
 [[th:วันจันทร์]]
 [[tl:Lunes]]
 [[tpi:Mande]]
