*Empty MediaWiki Message*

--- a/Бѣлороуси.mw
+++ b/Бѣлороуси.mw
@@ -1,6 +1,6 @@
 '''Бѣлорѹси''' (людиѥ) ({{Lang-be|беларусы}}) въсточьнословѣньскъ народъ ѥстъ. Чисменьмь бѣлорѹсъ до 10 леѡдръ сѫтъ, ихъже до 8 леѡдръ [[Бѣла Рѹсь|Бѣлы Рѹси]] живетъ. Вѣрьни [[Богъ|Богѹ]] людиѥ бол҄ьшемь чисменьмь (до 80% сѫтъ) [[Православиѥ|православьни]]  сѫтъ.
 
-[[Category:Народи]]
+[[Category:Словѣ́нє]]
 
 [[ar:بيلاروس]]
 [[be:Беларусы]]
