*Empty MediaWiki Message*

--- a/Мєльникъ.mw
+++ b/Мєльникъ.mw
@@ -1,5 +1,6 @@
-{{Селѥниѥ|Имѧ = Мєльникъ
-|| Тѷпъ = Гра́д
+{{coord|display=title|41|31||N|23|24||E|type:city}}
+{{Селѥниѥ|Имѧ = Мє́льникъ
+|| Тѷпъ = Гра́дъ
 | знамѧ= 
 | знакъ = 
 | Дрьжава = {{Блъгарїѩ знамѧ}} [[Блъгарі́ꙗ]]
@@ -7,10 +8,11 @@
 | Людии = 385 
 | Основанъ = 
 | Харта = 
-|}}
-'''Мєльникъ''' и {{lang-bg|Мѐлник}} ·  [[Блъгарі́ꙗ|Блъгарі́ѩ]] [[гра́дъ]] ѥ́стъ ⁙ Люди́и обита́ѥтъ 390 ⁙
+|}}[[Ви́дъ:Melnishkipiramidi.jpg‎|left|thumb|300px|града видъ]]
+'''Мє́льникъ''' и {{lang-bg|Мѐлник}} · [[Блъгарі́ꙗ|Блъгарі́ѩ]] Благоѥвгра́дьскꙑ о́бласти  [[гра́дъ]] ѥ́стъ ⁙ [[Блъгарі́ꙗ|Блъгарі́ѩ]] наимєн҄ьшии гра́дъ ѥ́стъ  ⁙ Люди́и обита́ѥтъ 390
 
-[[Ви́дъ:Melnishkipiramidi.jpg‎|ляво|thumb|550px|Панорамен изглед от Мелник]]
+
+== ꙁьри́ та́кождє  ==
 
 {{commonscat|Melnik}}
 
