*Empty MediaWiki Message*

--- a/Витоша.mw
+++ b/Витоша.mw
@@ -1,4 +1,8 @@
-'''Витоша''' [[Блъгарі́ꙗ|Блъгарїи]] гора ѥстъ, высиѭ 2300 [[метро|метръ]].
+{{coord|display=title|42|34||N|23|17||E|type:mountain}}
+[[Ви́дъ:Sofia-vitosha-kempinski.jpg|thumb]]
+'''Витоша''' [[Блъгарі́ꙗ|Блъгарїи]] гора ѥ́стъ · вꙑсиѭ 2300 [[мє́тро|мє́тръ]]
 
-
+{{commonscat|Vitosha}}
 [[Category:Блъгарі́ꙗ]]
+[[bg:Витоша]]
+[[en:Vitosha]]
