--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Рѡсі́ꙗ <br>{{lat-ga|Россия}}
 | знамѧ= [[Видъ:Flag of Russia.svg|150px|border|100px]]
 | знакъ = [[image:Coat of Arms of the Russian Federation.svg|80px]]
-| map = Rs-map-slovensky.png
+| map = Russian Federation (orthographic projection).svg
 | Стольнъ градъ = [[Москъва]]
 | Ѩзыкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ ѩꙁꙑ́къ]]
 | Глава = [[Дими́трїи Мєдвѣ́дєвъ]]
