*Empty MediaWiki Message*

--- a/Амєрїканьскꙑ_Ѥдьнѥнꙑ_Дрьжавꙑ.mw
+++ b/Амєрїканьскꙑ_Ѥдьнѥнꙑ_Дрьжавꙑ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name =  Амєрика́ньскꙑ Ѥдьнѥнꙑ́ Дрьжа́вꙑ<br>{{lat-ga|United States of America}}
 | знамѧ= [[Видъ:Flag of the United States.svg|150px|border|100px]]
 | знакъ = [[image:US-GreatSeal-Obverse.svg|80px]]
-| map = Location United States.svg
+| map = United States (orthographic projection).svg
 |Речениѥ =In God We Trust 
 | Стольнъ градъ = [[Ва́шингтонъ · гра́дъ|Ва́шингтонъ]]
 | Ѩзыкъ = [[англі́искъ ѩꙁꙑ́къ]]
