*Empty MediaWiki Message*

--- a/Срѣдинꙗнє.mw
+++ b/Срѣдинꙗнє.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Срѣдиньска Народьна Димократі́ꙗ<br>中华人民共和国
 | знамѧ= [[Видъ:Flag_of_the_People's_Republic_of_China.svg|150px]]
 | знакъ = [[Видъ:National Emblem of the People's Republic of China.png|100px]]
-| map = LocationPRChina.svg 
+| map = People's Republic of China (orthographic projection).svg
 | Стольнъ градъ = [[Бєи-Ꙃин ]]  
 | Ѩзыкъ = [[Срѣди́ньскъ ѩꙁꙑ́къ|срѣди́ньскъ]]
 | Глава = 
