*Empty MediaWiki Message*

--- a/Канада.mw
+++ b/Канада.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Канада
 | знамѧ= [[Видъ:Flag of Canada.svg|150px]]
 | знакъ = [[Видъ:Bigcancoat.png|100px]]
-| map = LocationCanada.svg 
+| map = Canada (orthographic projection).svg
 | Стольнъ градъ = [[Оттава]] 
 | Ѩзыкъ = [[Франкїискъ ѩзыкъ|франкїискъ]], [[Англїискъ ѩзыкъ|англїискъ]]
 | Глава = 
