--- a/Полꙗнє.mw
+++ b/Полꙗнє.mw
@@ -1,6 +1,20 @@
 [[Ви́дъ:Polacy znani w swiecie.jpg|400px|thumb]]
 '''Полꙗ́нє''' и {{lang-pl|Polacy}} · ꙁападьнословѣ́ньскъ наро́дъ ѥ́стъ ⁙ Полꙗ́нъ [[По́л҄ьскъ ѩꙁꙑ́къ|по́л҄ьскъ]] родьнъ ѩꙁꙑ́къ ѥ́стъ ⁙ Чисмєньмь полꙗ́нъ до 60 лєѡ́дръ сѫ́тъ · иꙁ ихъжє до 38 лєѡ́дръ [[По́л̑ьска|По́л̑ьсцѣ]] обита́ѥтъ ⁙ Вѣрьни [[Бо́гъ|Богоу]] лю́диѥ бол҄ьшємь чисмєньмь [[Римьскъ Каѳолїкїсмъ|каѳолїци]] сѫ́тъ
 
+== Полꙗ́нє свѣ́тѣ ==
+* [[По́л̑ьска|По́л̑ьсцѣ]] — 38&nbsp;636&nbsp;157 ([[2006]])
+* [[Рѡсі́ꙗ|Рѡсі́и]] — 173 000
+* [[АѤ҃Д]]ахъ — 9&nbsp;385&nbsp;233
+* [[Нѣ́мьци|Нѣ́мьцѣхъ]] — 3&nbsp;000&nbsp;000
+* [[Браꙁїлі́ꙗ|Браꙁїлі́и]] — 1&nbsp;600&nbsp;000
+* [[Франкі́ꙗ|Франкі́и]] — 1&nbsp;000&nbsp;000
+* [[Бѣла́ Роу́сь|Бѣлꙑѩ Роуси]] — 400&nbsp;000
+* [[Канада|Канадѣ]] — 850&nbsp;000
+* [[Литъва́|Литъвѣ]] — 350&nbsp;000
+* [[Оукра́ина|Оукра́инѣ]] — 144&nbsp;000
+* [[Чє́шьско|Чєсѣхъ]] — 100&nbsp;000
+* [[Латві́ꙗ|Латві́и]] — 57&nbsp;000
+* [[Каꙁахста́нъ|Каꙁахста́нѣ]] - 40 000
 [[Category:Словѣ́нє]]
 [[Category:По́л̑ьска]]
 
