--- a/Оукраиньскъ_ѩꙁꙑкъ.mw
+++ b/Оукраиньскъ_ѩꙁꙑкъ.mw
@@ -46,7 +46,7 @@
 
 [[af:Oekraïens]]
 [[an:Idioma ucrainés]]
-[[ang:Ūcrægnisc sprǣc]]
+[[ang:Ūcræȝnisc sprǣc]]
 [[ar:لغة أوكرانية]]
 [[ast:Ucranianu]]
 [[az:Ukrayna dili]]
@@ -120,7 +120,7 @@
 [[sv:Ukrainska]]
 [[szl:Ůkrajińsko godka]]
 [[th:ภาษายูเครน]]
-[[tr:Ukrayna dili]]
+[[tr:Ukraynaca]]
 [[uk:Українська мова]]
 [[vi:Tiếng Ukraina]]
 [[yi:אוקראיניש]]
