--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -25,7 +25,7 @@
 [[als:Ukraine]]
 [[am:ዩክሬን]]
 [[an:Ucraína]]
-[[ang:Ucrægna]]
+[[ang:Ucræȝna]]
 [[ar:أوكرانيا]]
 [[arc:ܐܘܩܪܐܝܢܐ]]
 [[ast:Ucrania]]
@@ -133,6 +133,7 @@
 [[ro:Ucraina]]
 [[roa-rup:Ucraina]]
 [[ru:Украина]]
+[[sah:Украина]]
 [[scn:Ucraina]]
 [[sco:Ukraine]]
 [[se:Ukraina]]
