/* Ро́дьствьна опꙑтьствова́ниꙗ */

--- a/Главьна_страница.mw
+++ b/Главьна_страница.mw
@@ -23,11 +23,9 @@
 [[:be:|Бѣлороусьскъ&nbsp;—&nbsp;єпїсимьно&nbsp;положєниѥ&nbsp;{{lat-ga|(беларуская)}}]] | [[:be-x-old:|Бѣлороусьскъ&nbsp;—&nbsp;старо&nbsp;положєниѥ&nbsp;{{lat-ga|(беларуская)}}]] | [[:bs:|Босньскъ&nbsp;{{lat-ga|(bosanski)}}]] | [[:bg:|Блъгарьскъ&nbsp;{{lat-ga|(български)}}]] | [[:dsb:|Дольнѥсрьбьскъ&nbsp;{{lat-ga|(Dolnoserbski)}}]] | [[:csb:|Кашоубьскъ&nbsp;{{lat-ga|(kaszëbsczi)}}]] | [[:mk:|Макєдоньскъ&nbsp;{{lat-ga|(македонски)}}]] | [[:pl:|Пол̑ьскъ&nbsp;{{lat-ga|(Polski)}}]] | [[:ru:|Роусьскъ&nbsp;{{lat-ga|(русский)}}]] | [[:sk:|Карпатьско-словѣньскъ&nbsp;{{lat-ga|(slovenčina)}}]] | [[:sl:|Їллѷрїиско-словѣньскъ&nbsp;{{lat-ga|(slovenščina)}}]] | [[:sr:|Срьбьскъ&nbsp;{{lat-ga|(српски/srpski)}}]] | [[:sh:|Срьбьскохръватьскъ&nbsp;{{lat-ga|(српскохрватски/srpskohrvatski)}}]] | [[:uk:|Оукраиньскъ&nbsp;{{lat-ga|(українська)}}]] | [[:hsb:|Горьнѥсрьбьскъ&nbsp;{{lat-ga|(hornjoserbšćina)}}]] | [[:hr:|Хръватьскъ&nbsp;{{lat-ga|(hrvatski)}}]] | [[:cs:|Чєшьскъ&nbsp;{{lat-ga|(česky)}}]]</small>
 
 ==Ро́дьствьна опꙑтьствова́ниꙗ==
-<span class="plainlinks">[http://meta.wikipedia.org Meta-Wikipedia] | [http://www.wiktionary.org Wiktionary] | [http://www.wikibooks.org Wikibooks] | [http://www.wikinews.org Wikinews] | [http://www.wikiquote.org Wikiquote] | [http://www.wikisource.org Wikisource] | [http://www.wikiversity.org Wikiversity]<br>Википє́дїѩ и́нъ ѩꙁꙑ́къ ви́ждь [http://www.wikipedia.org Wikipedia portal].</span>
-----
-
-|}
-
+{{Ро́дьствьна опꙑтьствова́ниꙗ}}
+<br>
+<center><span class="plainlinks">Википє́дїѩ и́нъ ѩꙁꙑ́къ ви́ждь [http://www.wikipedia.org Wikipedia portal]</span></center>
 ----
 
 <inputbox>
