robot  Adding: [[lv:Čatalhjujuka]]

--- a/Чаталхѷюкъ.mw
+++ b/Чаталхѷюкъ.mw
@@ -22,6 +22,7 @@
 [[hu:Çatal Hüyük]]
 [[it:Çatal Hüyük]]
 [[ja:チャタル・ヒュユク]]
+[[lv:Čatalhjujuka]]
 [[nl:Çatal Hüyük]]
 [[no:Çatal Höyük]]
 [[pl:Çatalhöyük]]
