[[el:Πάπας Αλέξανδρος ΣΤ΄]]

--- a/Папєжь_Алєѯандръ_Ѕ҃.mw
+++ b/Папєжь_Алєѯандръ_Ѕ҃.mw
@@ -16,6 +16,7 @@
 [[cs:Alexandr VI.]]
 [[da:Pave Alexander 6.]]
 [[de:Alexander VI.]]
+[[el:Πάπας Αλέξανδρος ΣΤ΄]]
 [[en:Pope Alexander VI]]
 [[eo:Aleksandro la 6-a]]
 [[es:Alejandro VI]]
