*Empty MediaWiki Message*

--- a/Сѷмєѡнъ_А҃_Вєликъ.mw
+++ b/Сѷмєѡнъ_А҃_Вєликъ.mw
@@ -24,6 +24,7 @@
 [[nl:Simeon I van Bulgarije]]
 [[no:Simeon I av Bulgaria]]
 [[pl:Symeon I]]
+[[ro:Simeon I]]
 [[ru:Симеон I]]
 [[sk:Simeon I. (Bulharsko)]]
 [[sr:Симеон I]]
