*Empty MediaWiki Message*

--- a/Свєньско.mw
+++ b/Свєньско.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Sweden.svg|150px]]
 | знакъ = [[image:Sweden greater coa1908-modern.png|80px]]
 | Речениѥ = För Sverige i tiden
-| map = LocationSweden.svg 
+| map = EU location SWE.png
 | Стольнъ градъ = [[Стоко́лмъ]] 
 | Ѩзыкъ = [[Свє́ньскъ ѩꙁꙑ́къ|свє́ньскъ]] 
 | Глава = 
