*Empty MediaWiki Message*

--- a/Свєньско.mw
+++ b/Свєньско.mw
@@ -1,6 +1,6 @@
 {{Дрьжава|name = Свє́ньско кралѥ́вьство<br>Konungariket Sverige
 | знамѧ= [[Видъ:Flag of Sweden.svg|150px]]
-| знакъ = [[image:Sweden greater coa1908-modern.png|80px]]
+| знакъ = [[image:Coat of Arms of Sweden.svg|80px]]
 | Речениѥ = För Sverige i tiden
 | map = EU location SWE.png
 | Стольнъ градъ = [[Стоко́лмъ]] 
