/* Москъвꙑ властьнꙑ ѥдиницѧ */

--- a/Москъва.mw
+++ b/Москъва.mw
@@ -11,20 +11,8 @@
 |}}
 '''Москъва''' и {{Lang-cu| Москꙑ}} · гєнїка Москъвє · словєсє обраꙁъ Москъва́ съ роу́сьскаѥго ѩꙁꙑка́ ѩтъ ѥ́стъ · {{lang-ru|Москва}} · [[сто́льнъ гра́дъ]] [[Рѡсі́ꙗ|Рѡсі́ѩ]] ѥ́стъ · ꙁьдана ѥ́стъ рѣцѣ [[Москъва (рѣка)|Москъвѣ]] ⁙ [[Москъвьска область|Москъвьскꙑ]] о́бласти гла́вьнъ гра́дъ ѥ́сть ⁙ Людии 10.472.629 обитаѥтъ. Помѣновєна ꙁапрьва лѣтописи 1147 лѣ́та ѥ́стъ ⁙ Гра́дъ сѧ положєниѥмь самостоꙗтєл҄ьнѫ съвѫꙁьнѫ ѥдиницѫ одѣлꙗѥтъ
 
-== Москъвꙑ властьнꙑ ѥдиницѧ ==
-Москъва́ на дєсѧть властии дѣлѥна ѥ́стъ · ихъ жє роу́сьско и́мѧ ⁖ властьнꙑ окрѫги ⁖ и {{lang-ru|административные округа}} ѥ́стъ
-# Срѣдьнъ властьнъ окрѫгъ
-# Сѣвєрьнъ властьнъ окрѫгъ
-# Сѣвєро-въсточьнъ властьнъ окрѫгъ
-# Въсточьнъ властьнъ окрѫгъ
-# Юго-въсточьнъ властьнъ окрѫгъ
-# Южьнъ властьнъ окрѫгъ
-# Юго-ꙁападьнъ властьнъ окрѫгъ
-# Ꙁападьнъ властьнъ окрѫгъ
-# Сѣвєро-ꙁападьнъ властьнъ окрѫгъ
-# [[Ꙁєлєногра́дъ|Ꙁєлєноградьскъ]] властьнъ окрѫгъ
-
-Властьнꙑ окрѫги дѣлѥнꙑ на 123 чѧсти сѫ́тъ
+райцентр львівської області.
+населення 2000 чоловік.
 
 == ꙁьри́ та́кождє ==
 {{commonscat|Moscow}}
