Reverted edits by [[Special:Contributions/77.121.36.141|77.121.36.141]] ([[User talk:77.121.36.141|Talk]]) to last version by [[User:JAnDbot|JAnDbot]]

--- a/Москъва.mw
+++ b/Москъва.mw
@@ -11,5 +11,173 @@
 |}}
 '''Москъва''' и {{Lang-cu| Москꙑ}} · гєнїка Москъвє · словєсє обраꙁъ Москъва́ съ роу́сьскаѥго ѩꙁꙑка́ ѩтъ ѥ́стъ · {{lang-ru|Москва}} · [[сто́льнъ гра́дъ]] [[Рѡсі́ꙗ|Рѡсі́ѩ]] ѥ́стъ · ꙁьдана ѥ́стъ рѣцѣ [[Москъва (рѣка)|Москъвѣ]] ⁙ [[Москъвьска область|Москъвьскꙑ]] о́бласти гла́вьнъ гра́дъ ѥ́сть ⁙ Людии 10.472.629 обитаѥтъ. Помѣновєна ꙁапрьва лѣтописи 1147 лѣ́та ѥ́стъ ⁙ Гра́дъ сѧ положєниѥмь самостоꙗтєл҄ьнѫ съвѫꙁьнѫ ѥдиницѫ одѣлꙗѥтъ
 
-райцентр львівської області.
-населення 2000 чоловік.
+== Москъвꙑ властьнꙑ ѥдиницѧ ==
+Москъва́ на дєсѧть властии дѣлѥна ѥ́стъ · ихъ жє роу́сьско и́мѧ ⁖ властьнꙑ окрѫги ⁖ и {{lang-ru|административные округа}} ѥ́стъ
+# Срѣдьнъ властьнъ окрѫгъ
+# Сѣвєрьнъ властьнъ окрѫгъ
+# Сѣвєро-въсточьнъ властьнъ окрѫгъ
+# Въсточьнъ властьнъ окрѫгъ
+# Юго-въсточьнъ властьнъ окрѫгъ
+# Южьнъ властьнъ окрѫгъ
+# Юго-ꙁападьнъ властьнъ окрѫгъ
+# Ꙁападьнъ властьнъ окрѫгъ
+# Сѣвєро-ꙁападьнъ властьнъ окрѫгъ
+# [[Ꙁєлєногра́дъ|Ꙁєлєноградьскъ]] властьнъ окрѫгъ
+
+Властьнꙑ окрѫги дѣлѥнꙑ на 123 чѧсти сѫ́тъ
+
+== ꙁьри́ та́кождє ==
+{{commonscat|Moscow}}
+{{Рѡсїѩ наибол҄ьше гради}}
+
+[[Category:Мосъква́| ]]
+[[Category:Сто́льни гра́ди]]
+[[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
+
+{{Link FA|vi}}
+
+{{Link FA|af}}
+{{Link FA|de}}
+
+[[af:Moskou]]
+[[als:Moskau]]
+[[am:ሞስኮ]]
+[[an:Moscú]]
+[[ang:Moscoƿ]]
+[[ar:موسكو]]
+[[arc:ܡܘܣܩܒܐ]]
+[[ast:Moscú]]
+[[av:Москва]]
+[[az:Moskva]]
+[[ba:Мәскәү]]
+[[bat-smg:Maskva]]
+[[bcl:Mosku]]
+[[be:Горад Масква]]
+[[be-x-old:Масква]]
+[[bg:Москва]]
+[[bn:মস্কো]]
+[[bo:མོ་སི་ཁོ]]
+[[br:Moskva]]
+[[bs:Moskva]]
+[[bxr:Мушхаваа]]
+[[ca:Moscou]]
+[[ce:Москва]]
+[[co:Moscù]]
+[[crh:Moskva]]
+[[cs:Moskva]]
+[[csb:Mòskwa]]
+[[cv:Мускав]]
+[[cy:Moscfa]]
+[[da:Moskva]]
+[[de:Moskau]]
+[[diq:Moskowa]]
+[[dsb:Moskwa]]
+[[dv:މޮސްކޯ]]
+[[el:Μόσχα]]
+[[en:Moscow]]
+[[eo:Moskvo]]
+[[es:Moscú]]
+[[et:Moskva]]
+[[eu:Mosku]]
+[[fa:مسکو]]
+[[fi:Moskova]]
+[[fiu-vro:Moskva]]
+[[fo:Moskva]]
+[[fr:Moscou]]
+[[frp:Moscou]]
+[[fy:Moskou]]
+[[ga:Moscó]]
+[[gd:Moscobha]]
+[[gl:Moscova - Москва]]
+[[got:𐌼𐍉𐍃𐌺𐍅𐌰]]
+[[gv:Moscow]]
+[[he:מוסקבה]]
+[[hi:मास्को]]
+[[hr:Moskva]]
+[[hsb:Moskwa]]
+[[ht:Moskou]]
+[[hu:Moszkva]]
+[[hy:Մոսկվա]]
+[[ia:Moscova]]
+[[id:Moskwa]]
+[[io:Moskva]]
+[[is:Moskva]]
+[[it:Mosca (città)]]
+[[ja:モスクワ]]
+[[jbo:Moscow]]
+[[jv:Moskwa]]
+[[ka:მოსკოვი]]
+[[kk:Мәскеу]]
+[[ko:모스크바]]
+[[ku:Moskow]]
+[[kv:Мӧскуа]]
+[[ky:Москва]]
+[[la:Moscua]]
+[[lb:Moskau]]
+[[li:Moskou]]
+[[lij:Mosca (çittæ)]]
+[[lt:Maskva]]
+[[lv:Maskava]]
+[[mdf:Моску]]
+[[mk:Москва]]
+[[ml:മോസ്കോ]]
+[[mn:Москва]]
+[[mr:मॉस्को]]
+[[ms:Moscow]]
+[[myv:Москов ош]]
+[[nah:Moscohuia]]
+[[nds:Moskau]]
+[[nds-nl:Moskou (stad)]]
+[[nl:Moskou]]
+[[nn:Moskva]]
+[[no:Moskva]]
+[[nov:Moskva]]
+[[nrm:Moscou]]
+[[oc:Moscòu]]
+[[os:Мæскуы]]
+[[pdc:Moscow]]
+[[pl:Moskwa]]
+[[pms:Mosca]]
+[[ps:مسکو]]
+[[pt:Moscovo]]
+[[qu:Moskwa]]
+[[ro:Moscova]]
+[[ru:Москва]]
+[[sah:Москва]]
+[[scn:Mosca (Russia)]]
+[[sco:Moscow]]
+[[sh:Moskva]]
+[[simple:Moscow]]
+[[sk:Moskva]]
+[[sl:Moskva]]
+[[sq:Moska]]
+[[sr:Москва]]
+[[sv:Moskva]]
+[[sw:Moscow]]
+[[szl:Moskwa]]
+[[ta:மாஸ்கோ]]
+[[te:మాస్కో]]
+[[tg:Маскав]]
+[[th:มอสโก]]
+[[tk:Moskwa]]
+[[tl:Moscow]]
+[[tpi:Mosko]]
+[[tr:Moskova]]
+[[tt:Mäskäw]]
+[[udm:Муско]]
+[[uk:Москва]]
+[[ur:ماسکو]]
+[[uz:Moskva]]
+[[vec:Mosca (Rusia)]]
+[[vi:Moskva]]
+[[vo:Moskva]]
+[[wa:Moscou]]
+[[wo:Mosku]]
+[[wuu:莫斯科]]
+[[xal:Москва]]
+[[yi:מאסקווע]]
+[[yo:Mọsko]]
+[[zh:莫斯科]]
+[[zh-classical:莫斯科]]
+[[zh-min-nan:Bo̍k-su-kho]]
+[[zh-yue:莫斯科]]
