--- a/Москъва.mw
+++ b/Москъва.mw
@@ -13,158 +13,4 @@
 
 
 
-== ꙁьри́ та́кождє ==
-{{commonscat|Moscow}}
-{{Рѡсїѩ наибол҄ьше гради}}
-
-[[Category:Мосъква́| ]]
-[[Category:Сто́льни гра́ди]]
-[[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
-
-{{Link FA|vi}}
-
-{{Link FA|af}}
-{{Link FA|de}}
-
-[[af:Moskou]]
-[[als:Moskau]]
-[[am:ሞስኮ]]
-[[an:Moscú]]
-[[ang:Moscoƿ]]
-[[ar:موسكو]]
-[[arc:ܡܘܣܩܒܐ]]
-[[ast:Moscú]]
-[[av:Москва]]
-[[az:Moskva]]
-[[ba:Мәскәү]]
-[[bat-smg:Maskva]]
-[[bcl:Mosku]]
-[[be:Горад Масква]]
-[[be-x-old:Масква]]
-[[bg:Москва]]
-[[bn:মস্কো]]
-[[bo:མོ་སི་ཁོ]]
-[[br:Moskva]]
-[[bs:Moskva]]
-[[bxr:Мушхаваа]]
-[[ca:Moscou]]
-[[ce:Москва]]
-[[co:Moscù]]
-[[crh:Moskva]]
-[[cs:Moskva]]
-[[csb:Mòskwa]]
-[[cv:Мускав]]
-[[cy:Moscfa]]
-[[da:Moskva]]
-[[de:Moskau]]
-[[diq:Moskowa]]
-[[dsb:Moskwa]]
-[[dv:މޮސްކޯ]]
-[[el:Μόσχα]]
-[[en:Moscow]]
-[[eo:Moskvo]]
-[[es:Moscú]]
-[[et:Moskva]]
-[[eu:Mosku]]
-[[fa:مسکو]]
-[[fi:Moskova]]
-[[fiu-vro:Moskva]]
-[[fo:Moskva]]
-[[fr:Moscou]]
-[[frp:Moscou]]
-[[fy:Moskou]]
-[[ga:Moscó]]
-[[gd:Moscobha]]
-[[gl:Moscova - Москва]]
-[[got:𐌼𐍉𐍃𐌺𐍅𐌰]]
-[[gv:Moscow]]
-[[he:מוסקבה]]
-[[hi:मास्को]]
-[[hr:Moskva]]
-[[hsb:Moskwa]]
-[[ht:Moskou]]
-[[hu:Moszkva]]
-[[hy:Մոսկվա]]
-[[ia:Moscova]]
-[[id:Moskwa]]
-[[io:Moskva]]
-[[is:Moskva]]
-[[it:Mosca (città)]]
-[[ja:モスクワ]]
-[[jbo:Moscow]]
-[[jv:Moskwa]]
-[[ka:მოსკოვი]]
-[[kk:Мәскеу]]
-[[ko:모스크바]]
-[[ku:Moskow]]
-[[kv:Мӧскуа]]
-[[ky:Москва]]
-[[la:Moscua]]
-[[lb:Moskau]]
-[[li:Moskou]]
-[[lij:Mosca (çittæ)]]
-[[lt:Maskva]]
-[[lv:Maskava]]
-[[mdf:Моску]]
-[[mk:Москва]]
-[[ml:മോസ്കോ]]
-[[mn:Москва]]
-[[mr:मॉस्को]]
-[[ms:Moscow]]
-[[myv:Москов ош]]
-[[nah:Moscohuia]]
-[[nds:Moskau]]
-[[nds-nl:Moskou (stad)]]
-[[nl:Moskou]]
-[[nn:Moskva]]
-[[no:Moskva]]
-[[nov:Moskva]]
-[[nrm:Moscou]]
-[[oc:Moscòu]]
-[[os:Мæскуы]]
-[[pdc:Moscow]]
-[[pl:Moskwa]]
-[[pms:Mosca]]
-[[ps:مسکو]]
-[[pt:Moscovo]]
-[[qu:Moskwa]]
-[[ro:Moscova]]
-[[ru:Москва]]
-[[sah:Москва]]
-[[scn:Mosca (Russia)]]
-[[sco:Moscow]]
-[[sh:Moskva]]
-[[simple:Moscow]]
-[[sk:Moskva]]
-[[sl:Moskva]]
-[[sq:Moska]]
-[[sr:Москва]]
-[[sv:Moskva]]
-[[sw:Moscow]]
-[[szl:Moskwa]]
-[[ta:மாஸ்கோ]]
-[[te:మాస్కో]]
-[[tg:Маскав]]
-[[th:มอสโก]]
-[[tk:Moskwa]]
-[[tl:Moscow]]
-[[tpi:Mosko]]
-[[tr:Moskova]]
-[[tt:Mäskäw]]
-[[udm:Муско]]
-[[uk:Москва]]
-[[ur:ماسکو]]
-[[uz:Moskva]]
-[[vec:Mosca (Rusia)]]
-[[vi:Moskva]]
-[[vo:Moskva]]
-[[wa:Moscou]]
-[[wo:Mosku]]
-[[wuu:莫斯科]]
-[[xal:Москва]]
-[[yi:מאסקווע]]
-[[yo:Mọsko]]
-[[zh:莫斯科]]
-[[zh-classical:莫斯科]]
-[[zh-min-nan:Bo̍k-su-kho]]
-[[zh-yue:莫斯科]]
+аяпфіпаіавпівапівваааааааааааааааа
