*Empty MediaWiki Message*

--- a/Хръвати.mw
+++ b/Хръвати.mw
@@ -1,6 +1,6 @@
-'''Хръва́ти''' ([[Хръватьскъ ѩзыкъ|хръватьскы]] ''hrvati'') южьнословѣньскъ народъ ѥстъ.
+'''Хръва́ти''' и {{lang-hr|hrvati}} · южьнословѣ́ньскъ наро́дъ ѥ́стъ ⁙ Хръва́тъ хръва́тьскъ ро́дьнъ ѩꙁꙑ́къ ѥ́стъ ⁙ Чисмєньмь хръва́тъ до 9 лєѡ́дръ сѫ́тъ · иꙁ ихъжє до 4 лєѡ́дръ [[Хръва́тьска|Хръва́тьсцѣ]] обита́ѥтъ ⁙ Вѣрьни Богоу лю́диѥ бол҄ьшємь чисмєньмь каѳолїци сѫ́тъ
 
-[[Category:Хръва́тьска]]
+[[Category:Хръва́тьска]][[Category:Словѣ́нє]]
 
 [[ar:كروات]]
 [[az:Xorvatlar]]
