*Empty MediaWiki Message*

--- a/Водьнъ.mw
+++ b/Водьнъ.mw
@@ -8,6 +8,7 @@
 [[en:Edessa, Greece]]
 [[fi:Edessa]]
 [[fr:Édessa (Grèce)]]
+[[hr:Edessa, Voden]]
 [[ja:エデッサ]]
 [[mk:Воден]]
 [[nl:Edessa (Griekenland)]]
