--- a/Омьскъ.mw
+++ b/Омьскъ.mw
@@ -62,6 +62,7 @@ Image:Coat_of_Arms_of_Omsk_(1785).png|Омьска знакъ 1785 лѣта
 [[sl:Omsk]]
 [[sr:Омск]]
 [[sv:Omsk]]
+[[tr:Omsk]]
 [[uk:Омськ]]
 [[vo:Omsk]]
 [[zh:鄂木斯克]]
