--- a/Влькъ_Стєфановищь_Караджищь.mw
+++ b/Влькъ_Стєфановищь_Караджищь.mw
@@ -1,5 +1,5 @@
 к[[Image:VukKaradzic.jpg|right|thumb|Влькъ Караджищъ]]
-'''Влькъ Стєфановищь Караджищь''' и {{lang-sr|Вук Стефановић Караџић}}· [[Ноє́мврїи · 7 дьнь|Ноє́мврїꙗ 7]] · [[1787]] лѣ́та — [[Фєвроуа́рїи · 7 дьнь|Фєвроуа́рїꙗ 7]] · [[1864]] · ѥдинъ наивєличаишиихъ [[Срьби|срьбьскъ]] [[ѩꙁꙑковѣ́дъ]] бѣашє ⁙ Ѥгожє съпѣшєниѥмь иꙑиѥшьиꙗꙗ аꙁбоукꙑ срьбьскаꙗ и ѩꙁꙑкъ кън҃ижьнъи сътворѥна бѣста·ꙗкожєсєꙗвл҃аѥтъсѧъкън҃иꙃѣглагол҃ємѣиСрьбьскꙑиБоукъварь, срьбьскꙑ рекъше Српски Буквар
+'''Влькъ Стєфановищь Караджищь''' и {{lang-sr|Вук Стефановић Караџић}}· [[Ноє́мврїи · 7 дьнь|Ноє́мврїꙗ 7]] · [[1787]] лѣ́та — [[Фєвроуа́рїи · 7 дьнь|Фєвроуа́рїꙗ 7]] · [[1864]] · ѥдинъ наивєличаишиихъ [[Срьби|срьбьскъ]] [[ѩꙁꙑковѣ́дъ]] бѣашє ⁙ Ѥгожє съпѣшєниѥмь иꙑиѥшьиꙗꙗ аꙁбоукꙑ срьбьскаꙗ и ѩꙁꙑкъ кън҃ижьнъи сътворѥна бѣста· ꙗко жє сє истѣ ꙗвлаѥтъ сѧ въ къниꙃѣ глагол҃ємѣ и Срьбьскꙑи Боукъварь, срьбьскꙑ рекъше Српски Буквар
 
 [[Category:Срь́би (ю́жьни)]]
 [[Category:Людиѥ]]
