*Empty MediaWiki Message*

--- a/Влькъ_Стєфановищь_Караджищь.mw
+++ b/Влькъ_Стєфановищь_Караджищь.mw
@@ -1,5 +1,5 @@
-к[[Image:VukKaradzic.jpg|right|thumb|Влькъ Караджищъ]]
-'''Влькъ Стєфановищь Караджищь''' и {{lang-sr|Вук Стефановић Караџић}}· [[Ноє́мврїи · 7 дьнь|Ноє́мврїꙗ 7]] · [[1787]] лѣ́та — [[Фєвроуа́рїи · 7 дьнь|Фєвроуа́рїꙗ 7]] · [[1864]] · ѥдинъ наивєличаишиихъ [[Срьби|срьбьскъ]] [[ѩꙁꙑковѣ́дъ]] бѣашє ⁙ Ѥгожє съпѣшєниѥмь иꙑиѥшьиꙗꙗ аꙁбоукꙑ срьбьскаꙗ и ѩꙁꙑкъ кънижьнъи сътворѥна ѥста· ꙗко жє сє истѣ ꙗви сѧ въ къниꙃѣ глаголѥмѣи Срьбьскꙑи Боукъварь, срьбьскꙑ рєкъшє Српски Буквар ⁙
+[[Image:VukKaradzic.jpg|right|thumb|Влькъ Караджищъ]]
+'''Влькъ Стєфановищь Караджищь''' и {{lang-sr|Вук Стефановић Караџић}}· [[Ноє́мврїи · 7 дьнь|Ноє́мврїꙗ 7]] · [[1787]] лѣ́та — [[Фєвроуа́рїи · 7 дьнь|Фєвроуа́рїꙗ 7]] · [[1864]] · ѥдинъ наивєличаишиихъ [[Срьби|срьбьскъ]] [[ѩꙁꙑковѣ́дъ]] бѣашє ⁙ Ѥгожє съпѣшєниѥмь иꙑиѥшьиꙗꙗ аꙁбоукꙑ срьбьскаꙗ и ѩꙁꙑкъ кънижьнъи сътворѥна ѥстє· ꙗко жє сє истѣ ꙗви сѧ въ къниꙃѣ глаголѥмѣи Срьбьскꙑи Боукъварь · срьбьскꙑ рєкъшє {{lat-ga|Српски Буквар}}
 
 [[Category:Срь́би (ю́жьни)]]
 [[Category:Людиѥ]]
