*Empty MediaWiki Message*

--- a/Пєрмь.mw
+++ b/Пєрмь.mw
@@ -5,9 +5,31 @@
 | Глава = 
 | Людии = 990 тꙑсѫщь
 | Основанъ = 1723
-| Харта =
+| Харта =[[Дѣ́ло:Administrative divisions of Perm (ru).svg|200px]]
 |}}
 '''Пє́рмь''' и {{lang-ru|Пермь}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] [[Пєрмьскъ краи|Пєрмьскаѥго]] краꙗ гла́вьнъ гра́дъ ѥ́стъ ⁙ Основана лѣ́та 1723 ѥ́стъ · нарєчєна гра́дъ съ лѣ́та 1781 ѥ́стъ ⁙ ꙁьдана ѥ́стъ рѣцѣ [[Кама (рѣка)|Камѣ]] ⁙ гра́да и́мѧ ''Молотовъ'' бѣашє ⁙ Люди́и обитаѥтъ 990 тꙑсѫщь
+
+== Пєрми чѧ́сти ==
+{| class="standard" cellpadding="5" cellspacing="0"
+ !Район||Люди́и обитаѥтъ · тꙑ҃сщ (2006)
+ |-
+ | class="bright" | Ꙃєржи́ньска чѧ́сть || 150,3
+ |-
+ | class="bright" | Индоустриа́льна чѧ́сть || 160,2
+ |-
+ | class="bright" | Ки́ровьска чѧ́сть || 123,6
+ |-
+ | class="bright" | Лє́ниньска чѧ́сть || 52,7
+ |-
+ | class="bright" | Мотовилихиньска чѧ́сть || 177,3
+ |-
+ | class="bright" | Орджоники́ꙃєвьска чѧ́сть || 111,0
+ |-
+ | class="bright" | Свєрдловьска чѧ́сть || 215,1
+ |-
+ | class="bright" | Но́вꙑ Лꙗдꙑ || 9,2
+ |}
+
 == ꙁьри́ та́кождє ==
 {{commonscat|Perm}}
 {{Рѡсїѩ наибол҄ьше гради}}
