*Empty MediaWiki Message*

--- a/Пєрмь.mw
+++ b/Пєрмь.mw
@@ -1,3 +1,4 @@
+{{coord|display=title|58|00|50|N|56|14|56|E|type:city}}
 {{Градъ|Имѧ = Пє́рмь
 | знамѧ= Flag_of_Perm.png
 | знакъ = Coat_of_Arms_of_Perm.png
