--- a/Пєрмь.mw
+++ b/Пєрмь.mw
@@ -12,7 +12,7 @@
 
 == Пєрми чѧ́сти ==
 {| class="standard" cellpadding="5" cellspacing="0"
- !Район||Люди́и обитаѥтъ · тꙑ҃сщ (2006)
+ !чѧ́сть||люди́и обитаѥтъ · тꙑ҃сщ (2006)
  |-
  | class="bright" | Ꙃєржи́ньска чѧ́сть || 150,3
  |-
