*Empty MediaWiki Message*

--- a/Свєньскъ_ѩꙁꙑкъ.mw
+++ b/Свєньскъ_ѩꙁꙑкъ.mw
@@ -1,6 +1,6 @@
-'''Свеньскъ ѩзыкъ''' (свеньскы: ''svenskt språk'' или ''svenska'') дрьжавьнъ ѩзыкъ [[Свеньско кралѥвьство|Свеньска]] кралѥвьства ѥстъ. Симъ ѩзыкомъ 9 лѡдръ людии глаголѣтъ.
+'''Свєньскъ ѩꙁꙑ́къ''' (свєньскꙑ: ''svenskt språk'' или ''svenska'') дрьжавьнъ ѩꙁꙑ́къ [[Свєньско кралѥвьство|Свєньска]] кралѥвьства ѥстъ. Симъ ѩꙁꙑ́комъ 9 лѡдръ людии глаголѣтъ.
 
-==Свеньска [[азъбѹкы]] ==
+==Свєньска [[аꙁъбѹкꙑ]] ==
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
 Aa
 Bb
@@ -31,7 +31,7 @@ Yy
 Öö
 </div>
 
-== Зьри такожде ==
+== Ꙁьри такождє ==
 {{InterWiki|sv|Huvudsida||свеньскыимь}}
 
 [[Category:Ѩзыци]]
