*Empty MediaWiki Message*

--- a/Вєлєсъ.mw
+++ b/Вєлєсъ.mw
@@ -1,7 +1,19 @@
-[[Ви́дъ:P1010198.JPG|thumb|right|200px]]
+{{coord|display=title|41|43|12|N|21|47|36|E|type:city}}
+{{Селѥниѥ|Имѧ = Вєлєсъ
+| Тѷпъ=гра́дъ
+| знамѧ= 
+| знакъ = 
+| Дрьжава = {{Македонїѩ знамѧ}} [[Макєдоні́ꙗ]]
+| Глава = 
+| Людии = 41 108 
+| Основанъ = 
+| Харта = 
+}}
+[[Ви́дъ:P1010198.JPG|thumb|left|200px]]
+'''Вєлєсъ''' и {{lang-mk|Велес}} {{Audio-IPA|Mk-Veles.ogg|[ˈvɛlɛs]}} · [[Макєдоні́ꙗ|Макєдоні́ѩ]] Вєлєсьскꙑ обьщинꙑ гла́вьнъ гра́дъ ѥ́стъ ⁙ Люди́и обитаѥтъ 43 тꙑ́сѫщи ⁙ Гра́дъ ꙁьда́нъ [[Вардаръ|Вардарѣ]] рѣцѣ ѥ́стъ
 
-'''Велесъ''' [[Македонїıа|Македонїѩ]] градъ ѥстъ. 
-
+== ꙁьри́ та́кождє ==
+[http://www.veles.gov.mk/ Вєлєсъ Мєждоусѣтии]
 {{Македонїѩ гради}}
 
 
@@ -19,8 +31,8 @@
 [[id:Veles (kota)]]
 [[mk:Велес]]
 [[nl:Veles (Macedonië)]]
-[[[ja:ヴェレス]]
-[nn:Veles]]
+[[ja:ヴェレス]]
+[[nn:Veles]]
 [[no:Veles]]
 [[pl:Veles (miasto)]]
 [[ro:Veles]]
