--- a/Чєшьско.mw
+++ b/Чєшьско.mw
@@ -10,7 +10,7 @@
 | Почѧта = 1993
 }}
 
-'''Чє́шьско''' ({{Lang-cu|Чє́си}}, слово «Чє́шьско» чє́шьскаѥго имене прѣложениѥ ѥстъ. {{Lang-cs|Česko}}) срѣдьн҄ии [[Еѵрѡпа|Еѵрѡпѣ]] дрьжава ѥстъ. Стольнъ градъ Чє́хъ [[Прага]] ѥстъ. Чє́шьско съставѣ [[Чешьскословѣньско|Чешьскословѣньсцѣ]] послѣди [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше. Послѣди распада Чє́шьскословѣньска Чє́шьско стала ѥсть пакы самостотѣльна дрьжава.
+'''Чє́шьско''' ({{Lang-cu|Чє́си}}, слово «Чє́шьско» чє́шьскаѥго имене прѣложениѥ ѥстъ. {{Lang-cs|Česko}}) срѣдьн҄ии [[Єѵрѡ́па|Єѵрѡ́пѣ]] дрьжава ѥстъ. Стольнъ градъ Чє́хъ [[Прага]] ѥстъ. Чє́шьско съставѣ [[Чешьскословѣньско|Чешьскословѣньсцѣ]] послѣди [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше. Послѣди распада Чє́шьскословѣньска Чє́шьско стала ѥсть пакы самостотѣльна дрьжава.
 
 {{Словѣньскы дрьжавы}}
 [[Category:Чє́шьско|*]]
