*Empty MediaWiki Message*

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -9,7 +9,7 @@
 | Людии = 142,2 лєѡ́дръ
 | Почѧта = 862 г. <ref>Летописная дата «призвания варягов», от которой традиционно отсчитывается начало непрерывной российской государственности; В современном виде Российская Федерация (РСФСР) была образована 7 ноября 1917 года. С 25 декабря 1991 года носит современное название.</ref>
 }}
-'''Рѡсі́ꙗ''' и {{lang-ru|Россия}} · равьноправьно и́мѧ '''Рѡсі́искꙑи Съвѫ́ꙁъ''' и {{Lang-ru|Российская Федерация}} · [[Єѵрѡ́па|Єѵрѡ́пꙑ]] въсто́ка и [[Асі́ꙗ|Асі́ѩ]] сѣ́вєра наибо́л҄ьшиꙗ свѣ́та дрьжа́ва ѥ́стъ ⁙ Рѡсі́ѩ сто́льнъ гра́дъ [[Москъва]] ѥ́стъ ⁙ Наибо́л҄ьша града [[Москъва]] и [[Санкт-Пєтєрбоу́ргъ]] ѥ́стє ⁙ Дрьжа́вьнъ [[роу́сьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 142,2 лєѡ́дръ обита́ѥтъ
+'''Рѡсі́ꙗ''' ({{lang-ru|Россия}} · равьноправьно и́мѧ '''Рѡсі́искꙑи Съвѫ́ꙁъ''' и {{Lang-ru|Российская Федерация}}) · [[Єѵрѡ́па|Єѵрѡ́пꙑ]] въсто́ка и [[Асі́ꙗ|Асі́ѩ]] сѣ́вєра наибо́л҄ьшиꙗ свѣ́та дрьжа́ва ѥ́стъ ⁙ Рѡсі́ѩ сто́льнъ гра́дъ [[Москъва]] ѥ́стъ ⁙ Наибо́л҄ьша града [[Москъва]] и [[Санкт-Пєтєрбоу́ргъ]] ѥ́стє ⁙ Дрьжа́вьнъ [[роу́сьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 142,2 лєѡ́дръ обита́ѥтъ
 
 == їсторі́ꙗ ==
 [[Ви́дъ:Flag of Russian SFSR.svg|thumb|left|Рѡсі́искꙑ Съвѣ́тьскꙑ Съвѫꙁьнꙑ Социалистичьскꙑ Димократі́ѩ ꙁна́мѧ]]
