--- a/Фїлїппополь.mw
+++ b/Фїлїппополь.mw
@@ -1,15 +1,17 @@
-{{Градъ|Имѧ = Фїлїппополь
+{{coord|display=title|42|09||N|24|45||E|type:city(378107)_region:BG}}
+{{Градъ|Имѧ = Фїлїппо́поль
 | знамѧ= 
 | знакъ = Plovdiv-coat-of-arms.svg
-| Дрьжава = {{Блъгарїѩ знамѧ}}Блъгарї
+| Дрьжава = {{Блъгарїѩ знамѧ}} Блъгарі́ꙗ
 | Глава = Иванъ Чомаковъ
-| Людии = 376 тысѫщь
+| Людии = 376 тꙑсѫщь
 | Основанъ = 
 | Харта = [[Видъ:Plovdiv location in Bulgaria.png]]
 }}
-'''Фїлїппо́поль''' или '''Плъвдивъ''' ({{lang-bg|Пловдив}}, прѣжде и ''Плъвдивъ'', ''Плъдинъ''. {{lang-el|Φιλιππούπολη}}. [[ѳракїискъ ѩзыкъ|ѳракїискы]] Pulpudeva). [[Блъгарї|Блъгарїѩ]] [[Фїллїпопольска область|Фїлїппопольскы области]] главьнъ градъ ѥстъ. Людии обитаѥтъ 376 тысѫщь.
+'''Фїлїппо́поль''' и́ли '''Плъвдивъ''' и {{lang-bg|Пловдив}} · прѣждє и ''Плъвдивъ'' · ''Плъдинъ'' · {{lang-el|Φιλιππούπολη}} · {{lang-txh|Pulpudeva}} · [[Блъгарі́ꙗ|Блъгарі́ѩ]] [[Фїллїпо́польска о́бласть|Фїлїппо́польскꙑ о́бласти]] гла́вьнъ гра́дъ ѥ́стъ ⁙ Люди́и обита́ѥтъ 376 тꙑсѫщь
 {{commonscat|Plovdiv}}
-[[Category:Блъгарї]]
+{{Блъгарі́ѩ гра́ди}}
+[[Category:Блъгарі́ѩ гра́ди]]
 
 [[ar:بلوفديف]]
 [[ast:Plovdiv]]
