*Empty MediaWiki Message*

--- a/Гатчина.mw
+++ b/Гатчина.mw
@@ -1,25 +1,27 @@
-{{Градъ|Имѧ = Гатчина
+{{Градъ|Имѧ = Га́тчина
 | знамѧ= 
 | знакъ = Coat of Arms of Gatchina (Leningrad oblast).png
-| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсі́ꙗ
 | Глава = 
-| Людии = 89 тысѧщь
+| Людии = 89 тꙑсѫщь
 | Основанъ = 1499
 | Харта = 
 |}}
-'''Гатчина''' ({{Lang-ru|Гатчина}}) [[Рѡсї|Рѡсїѩ]] [[Ленинградська область|Лениноградьскы области]] [[Гатчинська чѧсть|Гатчинськы чѧсти]] главьнъ градъ ѥстъ, ѥзера [[Бѣло (ѥзеро)|Бѣла]] брѣѕѣ лежитъ. Людии обитаѥтъ 89 тысѫщь. Помѣновена запрьва лѣта 1499 ѥстъ, наречена градъ съ лѣта 1796 ѥстъ. Дьньсь наиболии градъ [[Лениноградьска область|Лениноградьскы]] области ѥстъ.
+'''Га́тчина''' и {{Lang-ru|Гатчина}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] [[Лениноградська область|Лєниноградьскꙑ о́бласти]] [[Гатчинська чѧсть|Гатчиньскꙑ чѧсти]] гла́вьнъ гра́дъ ѥ́стъ · ѥꙁєра [[Бѣло (ѥꙁєро)|Бѣла]] брѣꙃѣ лєжитъ ⁙ Люди́и обита́ѥтъ 89 тꙑсѫщь. ⁙ Помѣновєна ꙁапрьва лѣ́та 1499 ѥ́стъ · нарєчєна гра́дъ съ лѣ́та 1796 ѥ́стъ ⁙ Дьнь́сь наиболии градъ [[Лениноградьска область|Лєниноградьскꙑ]] о́бласти ѥ́стъ
 
-== Їсторї ==
-Лѣтописи помѣновена лѣта 1499 пьсаниѥмь «село Хотчино надъ ѥзерьцемь Хотчиномь» бѣ.
+== їсторі́ꙗ ==
+[[Дѣ́ло:Gatstpaul.jpg|thumb|left]]
+Лѣтописи помѣновєна лѣ́та 1499 пьсаниѥмь ⁖ сєло Хотчино на́дъ ѥꙁєрьцємь Хотчиномь ⁖ бѣ
 
-Лѣта 1617, послѣди [[Ижорьска рать|Ижорьскы рати]] по [[Стлъбовьскъ миръ|Стлъбовьскѹ мирови]] прѣданъ [[Свеньско|Свеньскѹ]], възвращенъ [[Рѡсї|Рѡсїи]] по [[Сѣверьна рать|Сѣверьнѣ рати]] бѣ. Послѣди нареченъ Гатчиномь бѣ.
+Лѣ́та 1617 · послѣди [[Ижорьска рать|Ижорьскꙑ рати]] по [[Стлъбовьскъ миръ|Стлъбовьскоу мирови]] прѣданъ [[Свє́ньско|Свє́ньскоу]] · въꙁвращєнъ [[Рѡсі́ꙗ|Рѡсі́и]] по [[Сѣвєрьна рать|Сѣвєрьнѣ рати]] бѣ ⁙ Послѣди нарєчєнъ Гатчиномь бѣ.
 
-Съ лѣта 1923 по 1929 было града имѧ [[Львь Даѵїдовищь Троцкыи|Троцкъ]] бѣ, до лѣта было Красногвардеискъ бѣ. Лѣта 1944 Гатчинѣ възвращено прѣждьн҄ѥѥ имѧ ѥстъ.
+Съ лѣ́та 1923 по 1929 гра́да и́мѧ [[Ль́вь Даѵі́довищь Тро́цкꙑи|Тро́цкъ]] бѣ · до 1944 лѣ́та Красногвардѥ́искъ бѣ ⁙ Лѣ́та 1944 Га́тчинѣ въꙁвращєно прѣждьн҄ѥѥ и́мѧ ѥ́стъ
+
+== ꙁьри́ та́кождє ==
 
 {{commonscat|Gatchina}}
-[[Катигорї:Гради]]
-[[Катигорї:Лениноградьска область]]
-[[Катигорї:Рѡсї]]
+* [http://www.gatchina-meria.ru/ Гатчина Мєждоусѣтии]
+[[Category:Рѡсі́ѩ гра́ди]]
 
 [[ar:غاتتشينا]]
 [[be:Горад Гатчына]]
