--- a/Ищислитєл҄ь.mw
+++ b/Ищислитєл҄ь.mw
@@ -20,7 +20,8 @@
 [[ar:حاسوب]]
 [[arz:كمبيوتر]]
 [[ast:Computadora]]
-[[az:Kompüter]]
+[[az:Kompüte;po9sd0hyg]\df0j]
+hvgtr si r]]
 [[ba:Компьютер]]
 [[bar:Rechna]]
 [[bat-smg:Kuompioteris]]
