Reverted edits by [[Special:Contributions/83.26.76.63|83.26.76.63]] ([[User talk:83.26.76.63|Talk]]) to last version by [[User:JAnDbot|JAnDbot]]

--- a/Ищислитєл҄ь.mw
+++ b/Ищислитєл҄ь.mw
@@ -20,8 +20,7 @@
 [[ar:حاسوب]]
 [[arz:كمبيوتر]]
 [[ast:Computadora]]
-[[az:Kompüte;po9sd0hyg]\df0j]
-hvgtr si r]]
+[[az:Kompüter]]
 [[ba:Компьютер]]
 [[bar:Rechna]]
 [[bat-smg:Kuompioteris]]
