robot  Adding: [[pih:Eserbeyjan]]

--- a/Аꙁѣрбаичанъ.mw
+++ b/Аꙁѣрбаичанъ.mw
@@ -116,6 +116,7 @@
 [[oc:Azerbaitjan]]
 [[os:Азербайджан]]
 [[pam:Azerbaijan]]
+[[pih:Eserbeyjan]]
 [[pl:Azerbejdżan]]
 [[pms:Azerbaigian]]
 [[ps:آذربايجان]]
