--- a/Бєрлинъ.mw
+++ b/Бєрлинъ.mw
@@ -60,6 +60,7 @@
 [[eu:Berlin]]
 [[fa:برلین]]
 [[fi:Berliini]]
+[[fiu-vro:Berliin]]
 [[fo:Berlin]]
 [[fr:Berlin]]
 [[frp:Bèrlin]]
@@ -91,6 +92,7 @@
 [[ka:ბერლინი]]
 [[kab:Berlin]]
 [[kk:Берлин]]
+[[kn:ಬರ್ಲಿನ್]]
 [[ko:베를린]]
 [[ksh:Bälliin (Bundesland)]]
 [[ku:Berlîn]]
