*Empty MediaWiki Message*

--- a/Коуманово.mw
+++ b/Коуманово.mw
@@ -1,4 +1,6 @@
-{{Градъ|Имѧ = Кѹма́ново
+{{coord|display=title|42|05||N|21|40||E|type:city}}
+{{Градъ|Имѧ = Коума́ново
+|Тѷпъ= гра́дъ
 | знамѧ = Flag of Kumanovo.png
 | знакъ = MMCA(Kumanovo).png
 | Дрьжава = Макєдоні́ꙗ
@@ -7,10 +9,10 @@
 | Основанъ = 1519
 | Харта = [[Видъ:MK Kumanovo.png|250px]]
 }}
-'''Кѹма́ново''' ({{lang-mk|Куманово}}) [[Макєдоні́ꙗ|Македонїѩ]] [[градъ]] ѥстъ. Людии 105 484 обитаѥтъ. Македонїѩ бол҄ии градъ по [[Съкопиѥ|Съкопии]] ѥстъ.
+'''Коума́ново''' и {{lang-mk|Куманово}} {{Audio-IPA|Mk-Kumanovo.ogg|[kumanɔvɔ]}} · [[Макєдоні́ꙗ|Макєдоні́ѩ]] Коумановьскꙑ обьщинꙑ гла́вьнъ [[гра́дъ]] ѥ́стъ ⁙ Люди́и 105 484 обитаѥтъ. Макєдоні́ѩ бо́л҄ии гра́дъ по [[Съкопиѥ|Съкопиꙗ]] и [[Обитѣль|Обитѣли]] ѥ́стъ 
 
-== Зьри такожде ==
-
+== ꙁьри́ та́кождє ==
+* [http://www.kumanovo.gov.mk/ Коума́ново Мєждоусѣтии]
 {{Македонїѩ гради}}
 
 
@@ -23,7 +25,7 @@
 [[es:Kumanovo]]
 [[fr:Koumanovo (République de Macédoine)]]
 [[hr:Kumanovo]]
-id:Kumanovo]]
+[[id:Kumanovo]]
 [[it:Kumanovo]]
 [[lv:Kumanova]]
 [[lt:Kumanovas]]
@@ -36,7 +38,7 @@ id:Kumanovo]]
 [[ro:Kumanovo]]
 [[ru:Куманово]]
 [[hsb:Kumanovo]]
-[[[[sq:Kumanova]]
+[[sq:Kumanova]]
 [[sr:Куманово]]
 [[sh:Kumanovo]]
 [[fi:Kumanovo]]
