*Empty MediaWiki Message*

--- a/Дєбаръ.mw
+++ b/Дєбаръ.mw
@@ -1,8 +1,21 @@
-[[Ви́дъ:Дебар.JPG|thumb|right|200px]]
+{{coord|display=title|41|31||N|20|32||E|type:city}}
+{{Градъ|Имѧ = Дєбаръ
+|Тѷпъ= гра́дъ
+| знамѧ= 
+| знакъ = 
+| Дрьжава ={{Македонїѩ знамѧ}} [[Макєдоні́ꙗ]]
+| Глава = 
+| Людии = 19 542
+| Основанъ = 
+| Харта = 
+}}
+[[Ви́дъ:Дебар.JPG|thumb|left|200px]]
+'''Дєбаръ''' и {{lang-mk|Дебар}} {{audio-IPA|Mk-Debar.ogg|[ˈdɛbar]}} · [[Макєдоні́ꙗ|Макєдоні́ѩ]] Дєбарьскꙑ обьщинꙑ гла́вьнъ гра́дъ ѥ́стъ ⁙ Люди́и обитаѥтъ 19 тꙑсѫщь ⁙ Гра́дъ ꙁьданъ Дєбарьскѣ ѥꙁєрѣ ѥ́стъ
 
-'''Дебаръ''' ({{lang-mk|Дебар}}) [[Македонїıа|Македонїѩ]] градъ ѥстъ.
-
+== ꙁьри́ та́кождє ==
+* [http://www.dibra.gov.mk Дєбаръ Мєждоусѣтии]
 {{Македонїѩ гради}} 
 
 
 [[mk:Дебар]]
+[[en:Debar]]
