robot  Adding: bg, da, de, fr, hr, id, lv, nl, pl, ro, sh, sq, sr, sv, tr, vo

--- a/Дєбаръ.mw
+++ b/Дєбаръ.mw
@@ -14,8 +14,23 @@
 
 == ꙁьри́ та́кождє ==
 * [http://www.dibra.gov.mk Дєбаръ Мєждоусѣтии]
-{{Македонїѩ гради}} 
+{{Македонїѩ гради}}
 
-
-[[mk:Дебар]]
+[[bg:Дебър]]
+[[da:Debar]]
+[[de:Debar]]
 [[en:Debar]]
+[[fr:Debar]]
+[[hr:Debar]]
+[[id:Debar]]
+[[lv:Debara]]
+[[mk:Дебар]]
+[[nl:Debar]]
+[[pl:Debar]]
+[[ro:Debar]]
+[[sh:Debar]]
+[[sq:Dibra]]
+[[sr:Дебар]]
+[[sv:Debar]]
+[[tr:Debre, Makedonya]]
+[[vo:Debar]]
